[gd_scene load_steps=3 format=3 uid="uid://bt3ek76an68f7"]

[ext_resource type="Script" path="res://ui/02_molecules/item_entry/item_entry.gd" id="2"]
[ext_resource type="Theme" uid="uid://cgihxoevv7qgc" path="res://ui/01_atoms/theme.tres" id="3"]

[node name="ItemEntry" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 5
theme = ExtResource("3")
script = ExtResource("2")

[node name="NinePatch" type="NinePatchRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
region_rect = Rect2(0, 0, 14, 14)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
focus_mode = 2
alignment = 1

[node name="Icon" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 12
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Pendant"
vertical_alignment = 1
clip_text = true

[node name="Amount" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 12
size_flags_vertical = 3
text = "x1 "

[connection signal="focus_entered" from="." to="." method="_on_ItemEntry_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ItemEntry_focus_exited"]
